# django-template1

./: .gitignore  README.md  pyproject.toml
api_app/: urls.py
auth_app/: apps.py  models.py  serializers.py  tests.py  transport.py  urls.py  views.py
auth_app/migrations/: 0001_initial.py  0002_alter_user_password.py  0003_alter_user_password.py  0004_alter_user_password.py  0005_alter_user_password.py
catalog_app/: admin.py  models.py  serializers.py  urls.py  views.py
catalog_app/migrations/: 0001_initial.py  0002_alter_good_code.py  0003_remove_good_price1_remove_good_price2_good_price_and_more.py  0004_category_slug_manufacturer_slug_alter_good_slug.py
catalog_app/services/: __init__.py  good.py  update_catalog.py
image_app/: admin.py  apps.py  models.py  serializers.py
image_app/migrations/: 0001_initial.py  0002_image_slug.py
index_app/: base.py  urls.py
server/: settings.py  urls.py
