[tool.poetry]
name = "django-template1"
version = "0.1.0"
description = ""
authors = ["pekshevds <pekshev.ds@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
